# LLRStore

./: .env  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  Dockerfile.server.k8s  README.md  docker-compose.yaml  docker_build.sh  kv.yaml  run-server-k8s.sh  run-server.sh
client/: Cargo.toml
client/src/: cli.rs  client.rs  connection.rs  main.rs  repl.rs
kv_server/: Cargo.toml
kv_server/src/: cache.rs  cli.rs  connection.rs  kv_internal.rs  kv_membership.rs  main.rs  replication.rs  server.rs  server_state.rs  storage.rs  store.rs
memberlist/: Cargo.toml
memberlist/src/: config.rs  error.rs  failure_detector.rs  gossip.rs  internal_service.rs  lib.rs  member_list.rs  membership_store.rs  message_queue.rs  network.rs  node_list.rs
membership/: Cargo.toml
membership/src/: cli.rs  main.rs  member_meta.rs  server.rs
protocol/: Cargo.toml  build.rs
protocol/protos/: ecs_kv.proto  kv_ecs.proto  kv_kv.proto  kv_membership.proto  membership_kv.proto
protocol/src/: ecs_kv.rs  kv_ecs.rs  kv_kv.rs  kv_membership.rs  lib.rs  membership_kv.rs
shared/: Cargo.toml
shared/src/: causality_tracking.rs  cond_var.rs  envelope.rs  key.rs  lib.rs  logger.rs  protocol.rs  retry.rs  value.rs
