[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
protocol = { path = "../protocol" }
clap = { version = "4.2.5", features = ["derive"] }
dns-lookup = "2.0.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
rand = "0.8.5"
futures = "0.3.17"
