[package]
name = "kv_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
protocol = { path = "../protocol" }
clap = { version = "4.2.5", features = ["derive"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
linked-hash-map = "0.5"
serial_test = "2.0.0"
md-5 = "0.10.5"
tonic = "0.9.2"
futures = "0.3.28"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5" }
