[package]
name = "memberlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = { version = "0.4.0" }
autosurgeon = "0.7.1"
tokio = { version = "1.28.0", features = ["full"] }
serde = "1.0"
bincode = "1.3"
tracing = "0.1.37"
thiserror = "1.0.43"
rand = "0.8"
tracing-subscriber = "0.3"

# for development
[dev-dependencies]
tracing-test = "0.2.4"