[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
clap = { version = "4.2.5", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "fmt",
    "ansi",
    "std",
    "registry",
] }
md-5 = "0.10.5"
base16ct = "0.2.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
